# NVRLite

./: CMakeLists.txt  LICENSE  README.md  ReleaseNotes.md  example.json
ci/: config_ci.json  mediamtx.yml  test.sh
ext/ffmpeg_win/include/libavcodec/: codec_id.h  packet.h  version.h
ext/ffmpeg_win/include/libavdevice/: version.h
ext/ffmpeg_win/include/libavfilter/: avfilter.h
ext/ffmpeg_win/include/libavformat/: version.h
ext/ffmpeg_win/include/libavutil/: ffversion.h  timecode.h  version.h  video_enc_params.h
ext/ffmpeg_win/lib/: avcodec-58.def  avutil-56.def
include/: Utils.hpp
include/Capture/: CaptureWorker.hpp
include/Display/: DisplayManager.hpp
include/Http/: HttpHandler.hpp  json.hpp
include/Recording/: MP4Recorder.hpp
src/: main.cpp
src/Capture/: CaptureWorker.cpp
src/http/: HttpHandler.cpp
tests/: test_start_stop.sh
